Fixed header layout issue

--- a/assets/styles/partials/_header-left.scss
+++ b/assets/styles/partials/_header-left.scss
@@ -3,8 +3,16 @@
   padding: 0;
   position: fixed;
   margin-top: 30px;
-  margin-left: 50px;
+  margin-left: 40px;
 
+  @media screen and (max-width: 1220px) {
+    margin-left: 30px;
+  }
+
+  @media screen and (max-width: 1100px) {
+    margin-left: 25px;
+  }
+  
   @media screen and (max-width: 1000px) {
     margin-left: 20px;
   }
