--- a/assets/styles/partials/_header.scss
+++ b/assets/styles/partials/_header.scss
@@ -12,6 +12,14 @@
   font-size: 16px;
   padding-top: 1.5rem;
 
+  @media screen and (max-width: 1220px) {
+    font-size: 15px;
+  }
+
+  @media screen and (max-width: 1100px) {
+    font-size: 14px;
+  }
+
   @media screen and (max-width: 1025px) {
     font-size: 12px;
   }
